[package]
name = "esp32s3_e_paper_example"
version = "0.1.0"
edition = "2021"

[dependencies]
esp32s3-hal = "0.2.0"

embedded-hal-1 = { version = "=1.0.0-alpha.8", package = "embedded-hal" }

xtensa-lx-rt = { version = "0.13.0", features = ["esp32s3"], optional = true }

epd-waveshare = { version = "0.5.0" }

embedded-graphics-core = { version = "0.3.2", optional = true}
embedded-graphics = "0.7.1"

esp-backtrace = { version = "0.3.0", features = ["esp32s3", "panic-handler", "print-uart"] }

[features]
default = ["rt"]
rt = ["xtensa-lx-rt"]

[profile.release]
opt-level = 1